syntax = "proto3";

package sync.sync;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "sync/sync/header.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

// import "cosmos/base/query/v1beta1/pagination.proto";
import "sync/sync/params.proto";

option go_package = "sync/x/sync/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/sync/sync/params";
  
  }
  
  // Queries a list of Header items.
  rpc Header    (QueryGetHeaderRequest) returns (QueryGetHeaderResponse) {
    option (google.api.http).get = "/sync/sync/header/{id}";
  
  }
  rpc HeaderAll (QueryAllHeaderRequest) returns (QueryAllHeaderResponse) {
    option (google.api.http).get = "/sync/sync/header";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetHeaderRequest {
  uint64 id = 1;
}

message QueryGetHeaderResponse {
  Header Header = 1 [(gogoproto.nullable) = false];
}

message QueryAllHeaderRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllHeaderResponse {
  repeated Header                                 Header     = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}



